--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+rich-experiments-6e037a3981c5.json
 # dependencies
 /node_modules
 /.pnp
