--- a/apps/minimal-pomodoro/package.json
+++ b/apps/minimal-pomodoro/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next dev --port 3001",
     "build": "next build",
     "start": "next start --port 3001",
     "lint": "eslint ."
   },
   "dependencies": {
-    "unified-chat": "file:../../packages/unified-chat",
-    "next": "16.0.10",
+    "lucide-react": "^0.454.0",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "lucide-react": "^0.454.0"
+    "unified-chat": "file:../../packages/unified-chat"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
