--- a/apps/unified-chat-service/package.json
+++ b/apps/unified-chat-service/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint ."
@@ -49,7 +49,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.11.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
