--- a/apps/unified-chat-service/package.json
+++ b/apps/unified-chat-service/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "mammoth": "^1.11.0",
     "next": "^16.1.6",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
