--- a/packages/unified-chat/package.json
+++ b/packages/unified-chat/package.json
@@ -2,12 +2,19 @@
   "name": "unified-chat",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/index.tsx",
-  "types": "./src/index.tsx",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.tsx"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
   },
-  "scripts": {},
+  "scripts": {
+    "build": "tsup"
+  },
   "peerDependencies": {
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
@@ -20,5 +27,9 @@
     "lucide-react": "^0.454.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "tsup": "^8.3.5",
+    "typescript": "^5"
   }
 }
